# RaspberryPI

./: README.md
baremetal/: README.txt
baremetal/PDC8544scroller/: README.md  armTimer.c  gpio.h  pdc8544.c  port.h  uart.c  uart.h
baremetal/PDC8544scroller/source/: CMakeLists.txt  armTimer.h  fontdata.h  gpio.c  interrupts.c  interrupts.h  kernel.c  pdc8544.h  port.h  pwm.c  pwm.h  spi.c  spi.h  startup.S  sysTimer.c  sysTimer.h
baremetal/UART/: README.txt
baremetal/UART/source/: CMakeLists.txt  gpio.c  interrupts.c  interrupts.h  kernel.c  sysTimer.c  sysTimer.h  uart.c  uart.h
python/: GaStack.py  README.md  SymbolScore.py  Vocabulary.py  Word.py  worDaDe.py
python/wordPuzzleSolver/: FoundWordsList.py  GameArea.py  README.md  Symbol.py
